--- a/template/README.ejs
+++ b/template/README.ejs
@@ -1,12 +1,12 @@
 <div align="center">
 
-# awesome-stars-eryajf
+# awesome-stars
 
 [![Awesome](https://awesome.re/badge.svg)](https://awesome.re)
-[![Auth](https://img.shields.io/badge/Auth-eryajf-ff69b4?logo=github)](https://github.com/eryajf)
-[![GitHub Pull Requests](https://img.shields.io/github/stars/eryajf/awesome-stars-eryajf?logo=Undertale)](https://github.com/eryajf/awesome-stars-eryajf/stargazers)
-[![HitCount](https://views.whatilearened.today/views/github/eryajf/awesome-stars-eryajf.svg)](https://github.com/eryajf/awesome-stars-eryajf)
-[![GitHub license](https://img.shields.io/github/license/eryajf/awesome-stars-eryajf)](https://github.com/eryajf/awesome-stars-eryajf/blob/main/LICENSE)
+[![Auth](https://img.shields.io/badge/Auth-rovast-ff69b4?logo=github)](https://github.com/rovast)
+[![GitHub Pull Requests](https://img.shields.io/github/stars/rovast/awesome-stars?logo=Undertale)](https://github.com/rovast/awesome-stars/stargazers)
+[![HitCount](https://views.whatilearened.today/views/github/rovast/awesome-stars.svg)](https://github.com/rovast/awesome-stars)
+[![GitHub license](https://img.shields.io/github/license/rovast/awesome-stars)](https://github.com/rovast/awesome-stars/blob/main/LICENSE)
 
 🤩 我的star列表，每天凌晨自动更新 🤩
 
